# hummingbird

__MACOSX/hb_ta-master/: ._scripts
__MACOSX/hb_ta-master/scripts/: ._controller_11.py  ._controller_12_hw.py  ._controller_12_sim.py
control_book_public_solutions-master/_B_pendulum/python_old/: pendulumDynamics.py
control_book_public_solutions-master/_C_satellite/matlab/: satelliteParam.m
control_book_public_solutions-master/_C_satellite/simulink/: satellite_param.m
full_case_study_solns/_A_arm/LaTeX/: hw_problems.tex
full_case_study_solns/_B_pendulum/LaTeX/: description.tex  hw_problems.tex
full_case_study_solns/_C_satellite/LaTeX/: hw_problems.tex
full_case_study_solns/_d_mass/LaTeX/: description.tex  hw_problems.tex  mass_spring_damper.tex  solution_header.tex
full_case_study_solns/_d_mass/matlab_old/: massAnimation.m  massDynamics.m  massParam.m  plotData.m  plotObserverData.m
full_case_study_solns/_d_mass/python_old/: massAnimation.py  massDynamics.py  massParam.py  plotData.py  plotObserverData.py
full_case_study_solns/_d_mass/simulink/: drawMSD.m  mass_dynamics.m  mass_param.m
full_case_study_solns/_e_ballbeam/LaTeX/: ballbeam.tex  description.tex  hw_problems.tex  (+1 more)
hb_ta-master/: CMakeLists.txt  hb_setup.sh  package.xml
hb_ta-master/include/: pid_controller.h
hb_ta-master/param/: hb.yml
hb_ta-master/scripts/: controller_10.py  controller_11.py  controller_12_hw.py  controller_12_sim.py  controller_7.py  controller_8.py  controller_template.py  dynamics.py
hb_ta-master/src/: pid_controller.cpp  pid_controller_node.cpp
(+771 files in other folders)
